--- a/config/sites/default/core.entity_view_display.media.remote_video.default.yml
+++ b/config/sites/default/core.entity_view_display.media.remote_video.default.yml
@@ -4,52 +4,26 @@ status: true
 dependencies:
   config:
     - field.field.media.remote_video.field_media_oembed_video_1
-    - image.style.thumbnail
     - media.type.remote_video
   module:
-    - image
     - media
-    - user
 id: media.remote_video.default
 targetEntityType: media
 bundle: remote_video
 mode: default
 content:
-  created:
-    label: hidden
-    type: timestamp
-    weight: 0
-    region: content
-    settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
-    third_party_settings: {  }
   field_media_oembed_video_1:
     type: oembed
-    weight: 6
-    label: above
+    weight: 0
+    label: hidden
     settings:
       max_width: 0
       max_height: 0
     third_party_settings: {  }
     region: content
-  thumbnail:
-    type: image
-    weight: 5
-    label: hidden
-    settings:
-      image_style: thumbnail
-      image_link: ''
-    region: content
-    third_party_settings: {  }
-  uid:
-    label: hidden
-    type: author
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  created: true
   name: true
   search_api_excerpt: true
+  thumbnail: true
+  uid: true
