--- a/config/sites/default/filter.format.plain_text.yml
+++ b/config/sites/default/filter.format.plain_text.yml
@@ -1,7 +1,9 @@
 uuid: bd3b5442-85c2-4ffc-965e-ce90c0e3fe54
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - entity_embed
 _core:
   default_config_hash: NIKBt6kw_uPhNI0qtR2DnRf7mSOgAQdx7Q94SKMjXbQ
 name: 'Plain text'
@@ -26,4 +28,10 @@ filters:
     provider: filter
     status: true
     weight: 0
+    settings: {  }
+  entity_embed:
+    id: entity_embed
+    provider: entity_embed
+    status: true
+    weight: 100
     settings: {  }
