TH-351 change hero image

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.yml
@@ -3,5 +3,5 @@ title_2: "Convenient,"
 title_3: "Effective."
 subtitle: "Connecting you to your healthiest."
 img:
-  src: "https://placeimg.com/950/950/any"
+  src: "../../images/th-hero-image.jpg"
   alt: "Alternative Text"
