TH-330 footer adjustments

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.yml
@@ -34,11 +34,13 @@ items:
         url: "/"
       - title: "Caregiver Support"
         url: "/"
-      - title: "Support Group"
+      - title: "Support Groups"
         url: "/"
   - title: "Community Health"
     url: "/"
     below:
+      - title: "Healthy Living Info"
+        url: "/"
       - title: "Classes & Events"
         url: "/"
       - title: "Screenings"
@@ -66,22 +68,4 @@ items:
       - title: "Non-Clinical"
         url: "/"
       - title: "Open Positions"
-        url: "/"
-  - title: "Medical Education"
-    url: "/"
-    below:
-      - title: "School of Health Sciences"
-        url: "/"
-      - title: "Internships & Training"
-        url: "/"
-      - title: "Continuing Medical Education"
-        url: "/"
-  - title: "Medical Professionals"
-    url: "/"
-    below:
-      - title: "Transfer Center"
-        url: "/"
-      - title: "Research"
-        url: "/"
-      - title: "Clinical Trials"
         url: "/"
