--- a/config/sites/default/core.entity_form_display.taxonomy_term.insurance_groups.default.yml
+++ b/config/sites/default/core.entity_form_display.taxonomy_term.insurance_groups.default.yml
@@ -24,10 +24,11 @@ content:
   field_insurance_company:
     weight: 31
     settings:
+      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: entity_reference_autocomplete
     region: content
   name:
     type: string_textfield
