--- a/config/sites/default/core.entity_view_display.taxonomy_term.insurance_groups.default.yml
+++ b/config/sites/default/core.entity_view_display.taxonomy_term.insurance_groups.default.yml
@@ -23,9 +23,9 @@ content:
     weight: 1
     label: above
     settings:
-      link_to_entity: false
+      link: true
     third_party_settings: {  }
-    type: string
+    type: entity_reference_label
     region: content
 hidden:
   search_api_excerpt: true
