--- a/config/sites/default/search_api.index.towerhealth.yml
+++ b/config/sites/default/search_api.index.towerhealth.yml
@@ -94,16 +94,18 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_profile_gender
-  provider_insurance_company_string:
-    label: 'Insurance accepted » Taxonomy term » Insurance company » String'
+  provider_insurance_groups_insurance_company_string:
+    label: 'Insurance accepted » Taxonomy term » Insurance Company » Taxonomy term » Name'
     datasource_id: 'entity:node'
-    property_path: 'field_insurance_ref:entity:field_insurance_company'
+    property_path: 'field_insurance_ref:entity:field_insurance_company:entity:name'
     type: string
     dependencies:
       config:
         - field.storage.node.field_insurance_ref
         - field.storage.taxonomy_term.field_insurance_company
       module:
+        - taxonomy
+        - taxonomy
         - taxonomy
   provider_insurance_groups_string:
     label: 'Insurance accepted » Taxonomy term » Name » String'
@@ -296,7 +298,7 @@ processor_settings:
       - location_services_title_string
       - name
       - profile_gender_string
-      - provider_insurance_company_string
+      - provider_insurance_groups_insurance_company_string
       - provider_insurance_groups_string
       - provider_insurance_ref
       - provider_location_title_string
