--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.yml
@@ -6,11 +6,6 @@ menu_items:
         url: "#"
       - title: "Menu Item 1 Sub 2"
         url: "#"
-        below:
-          - title: "Menu Item 1 Sub Sub 1"
-            url: "#"
-          - title: "Menu Item 1 Sub Sub 2"
-            url: "#"
       - title: "Menu Item 1 Sub 3"
         url: "#"
       - title: "Menu Item 1 Sub 4"
@@ -26,6 +21,20 @@ menu_items:
         url: "#"
   - title: "Menu Item 3"
     url: "#"
+    below:
+      - title: "Menu Item 3 Sub 1"
+        url: "#"
+      - title: "Menu Item 3 Sub 2"
+        url: "#"
+      - title: "Menu Item 3 Sub 3"
+        url: "#"
+      - title: "Menu Item 3 Sub 4"
+        url: "#"
+  - title: "Menu Item 3"
+    url: "#"
+    modifiers:
+      1:
+        secondary
     below:
       - title: "Menu Item 3 Sub 1"
         url: "#"
