TH-330 footer updates

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.yml
@@ -36,10 +36,12 @@ items:
         url: "/"
       - title: "Support Groups"
         url: "/"
-  - title: "Community Health"
+      - title: "Homecare"
+        url: "/"
+  - title: "Health & Wellness"
     url: "/"
     below:
-      - title: "Healthy Living Info"
+      - title: "Healthy Living"
         url: "/"
       - title: "Classes & Events"
         url: "/"
@@ -47,25 +49,27 @@ items:
         url: "/"
       - title: "Articles"
         url: "/"
-  - title: "Support Tower Health"
+      - title: "Community Programs"
+        url: "/"
+  - title: "About"
     url: "/"
     below:
-      - title: "Donate"
+      - title: "Leadership"
+        url: "/"
+      - title: "News"
+        url: "/"
+      - title: "Quality & Safety"
+        url: "/"
+      - title: "Tower Health Medical Group"
+        url: "/"
+      - title: "Reading Hospital Foundation"
         url: "/"
       - title: "Volunteer"
         url: "/"
-      - title: "Tower Health Foundation"
-        url: "/"
-  - title: "Jobs"
+  - title: "Careers"
     url: "/"
     below:
-      - title: "Benefits"
-        url: "/"
-      - title: "Nursing"
-        url: "/"
-      - title: "Allied Health"
-        url: "/"
-      - title: "Non-Clinical"
-        url: "/"
       - title: "Open Positions"
+        url: "/"
+      - title: "Benefits"
         url: "/"
