--- a/config/sites/default/search_api.server.acquia_search_server.yml
+++ b/config/sites/default/search_api.server.acquia_search_server.yml
@@ -29,6 +29,6 @@ backend_config:
   suggest_corrections: true
   suggest_words: false
   acquia_search_possible_cores:
-    - DILT-190043.dev.towerhealthdev
-    - DILT-190043.dev.default
-  overridden_by_acquia_search: 2
+    - DILT-190043.prod.towerhealth
+    - DILT-190043.prod.default
+    - DILT-190043
