--- a/config/sites/default/core.entity_form_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_form_display.node.profile.default.yml
@@ -39,6 +39,51 @@ dependencies:
     - readonly_field_widget
 third_party_settings:
   field_group:
+    group_video:
+      children:
+        - field_profile_video
+      parent_name: group_content
+      weight: 39
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: Video
+      region: content
+    group_rating_comments:
+      children:
+        - field_rating_comments_ref
+      parent_name: group_ratings
+      weight: 34
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Rating Comments'
+      region: content
+    group_ratings:
+      children:
+        - field_rating_overall
+        - field_rating_count
+        - field_rating_comment_count
+        - group_rating_comments
+      parent_name: group_content
+      weight: 38
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: Ratings
+      region: content
     group_migrated_data:
       children:
         - field_profile_first_name
@@ -63,16 +108,30 @@ third_party_settings:
         - field_profile_board_eligible
         - field_profile_scheduling
       parent_name: group_content
-      weight: 21
+      weight: 37
       format_type: tab
       format_settings:
-        label: 'Migrated data'
-        formatter: closed
-        description: "<h3>Migrated data</h3>\r\nThe content in this grouping comes from the MSOW data source and is not intended to be editable. If a value needs to change then the source data needs to be corrected and the content re-imported."
-        required_fields: true
         id: ''
         classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
       label: 'Migrated data'
+      region: content
+    group_display:
+      children:
+        - title
+      parent_name: group_content
+      weight: 36
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Display Name'
+      region: content
     group_content:
       children:
         - group_display
@@ -80,68 +139,14 @@ third_party_settings:
         - group_ratings
         - group_video
       parent_name: ''
-      weight: 5
+      weight: 0
       format_type: tabs
       format_settings:
         id: ''
         classes: ''
         direction: vertical
       label: Content
-    group_ratings:
-      children:
-        - field_rating_overall
-        - field_rating_count
-        - field_rating_comment_count
-        - group_rating_comments
-      parent_name: group_content
-      weight: 22
-      format_type: tab
-      format_settings:
-        label: Ratings
-        formatter: closed
-        description: "<h3>Provider Ratings</h3>\r\nThe ratings for the provider come from Binary Fountain and are updated through a migration on a weekly schedule."
-        required_fields: true
-        id: ''
-        classes: ''
-      label: Ratings
-    group_video:
-      children:
-        - field_profile_video
-      parent_name: group_content
-      weight: 23
-      format_type: tab
-      format_settings:
-        id: ''
-        classes: ''
-        formatter: closed
-        description: ''
-        required_fields: true
-      label: Video
-    group_display:
-      children:
-        - title
-      parent_name: group_content
-      weight: 20
-      format_type: tab
-      format_settings:
-        id: ''
-        classes: ''
-        formatter: closed
-        description: ''
-        required_fields: true
-      label: 'Display Name'
-    group_rating_comments:
-      children:
-        - field_rating_comments_ref
-      parent_name: group_ratings
-      weight: 29
-      format_type: fieldset
-      format_settings:
-        id: ''
-        classes: ''
-        description: ''
-        required_fields: true
-      label: 'Rating Comments'
+      region: content
 id: node.profile.default
 targetEntityType: node
 bundle: profile
@@ -371,13 +376,13 @@ content:
     region: content
   field_profile_video:
     type: media_library_widget
-    weight: 6
+    weight: 40
     settings:
       media_types: {  }
     third_party_settings: {  }
     region: content
   field_rating_comment_count:
-    weight: 28
+    weight: 33
     settings:
       label: above
       formatter_type: null
@@ -388,7 +393,7 @@ content:
     region: content
   field_rating_comments_ref:
     type: readonly_field_widget
-    weight: 30
+    weight: 34
     settings:
       label: above
       formatter_type: null
@@ -397,7 +402,7 @@ content:
     third_party_settings: {  }
     region: content
   field_rating_count:
-    weight: 27
+    weight: 32
     settings:
       label: above
       formatter_type: null
@@ -407,7 +412,7 @@ content:
     type: readonly_field_widget
     region: content
   field_rating_overall:
-    weight: 26
+    weight: 31
     settings:
       label: above
       formatter_type: null
@@ -418,13 +423,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 10
+    weight: 7
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -439,7 +444,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 6
     region: content
     third_party_settings: {  }
   sticky:
@@ -451,7 +456,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 21
+    weight: 30
     region: content
     settings:
       size: 60
@@ -467,7 +472,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
