TH-353 add image background varients

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.yml
@@ -5,3 +5,4 @@ subtitle: "Connecting you to your healthiest."
 img:
   src: "../../images/th-hero-image.jpg"
   alt: "Alternative Text"
+classes: "growth top-left"
