TH-353 image and content styles

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.yml
@@ -1,4 +1,4 @@
 img:
-  src: "../../images/th-hero-image.jpg"
+  src: "../../images/th-cta-image.jpg"
   alt: "Alternative Text"
 classes: "trust bottom-left"
