remove grid, and split title into 2 fields

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.yml
@@ -1,4 +1,5 @@
-text: "Need Help? We're Here."
+title_1: "Need Help?"
+title_2: "We're Here."
 img:
   src: "../../images/th-cta-image.jpg"
   alt: "Alternative Text"
