TH-352 button styles

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.yml
@@ -5,19 +5,19 @@ subtitle: "Helping you get the support you need."
 links:
   - text: "Make an Appointment"
     url: "/"
-    icon: "../../images/th-cal.svg"
+    icon: "th-cal.svg"
   - text: "Find a Hospital or Location"
     url: "/"
-    icon: "../../images/th-find-hospital.svg"
+    icon: "th-find-hospital.svg"
   - text: "Pay my Bill"
     url: "/"
-    icon: "../../images/th-bill.svg"
+    icon: "th-bill.svg"
   - text: "Urgent & Emergency Care Wait Times"
     url: "/"
-    icon: "../../images/th-emergency-time.svg"
+    icon: "th-emergency-time.svg"
   - text: "My TowerHealth"
     url: "/"
-    icon: "../../images/th-my-tower.svg"
+    icon: "th-my-tower.svg"
   - text: "Register or Sign-up for a Class"
     url: "/"
-    icon: "../../images/th-medal.svg"
+    icon: "th-medal.svg"
