modify cta banner styles

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.yml
@@ -1,7 +1,7 @@
-title_1: "Simple,"
-title_2: "Accessible,"
+title_1: "Effortless,"
+title_2: "Accessible"
 title_3: "Healthcare."
-subtitle: "Helping you get the support you need."
+subtitle: "Helping you connect with the care you need."
 links:
   - text: "Make an Appointment"
     url: "/"
@@ -9,15 +9,15 @@ links:
   - text: "Find a Hospital or Location"
     url: "/"
     icon: "th-find-hospital.svg"
-  - text: "Pay my Bill"
+  - text: "Pay my Bill & Estimate Costs"
     url: "/"
     icon: "th-bill.svg"
-  - text: "Urgent & Emergency Care Wait Times"
+  - text: "Urgent Care & Emergency Wait Times"
     url: "/"
     icon: "th-emergency-time.svg"
   - text: "My TowerHealth"
     url: "/"
     icon: "th-my-tower.svg"
-  - text: "Register or Sign-up for a Class"
+  - text: "Sign-up for a Class or Event"
     url: "/"
     icon: "th-medal.svg"
