add utility nav and search

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/site-header.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/site-header.yml
@@ -1,5 +1,21 @@
 logo_link_url: "#"
 
+utility_items:
+  - title: "Careers"
+    url: "#"
+  - title: "My TowerHealth"
+    url: "#"
+    modifiers:
+      1:
+        mytower
+  - title: "484-628-Help"
+    url: "#"
+    modifiers:
+      1:
+        cta
+
+  
+  
 menu_items:
   - title: "Providers"
     url: "#"
