add site header js to library

--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -8,6 +8,10 @@ main-menu:
     dist/02-molecules/menus/main-menu/main-menu.js: {}
   dependencies:
     - core/drupal
+    
+site-header:
+  js:
+    dist/03-organisms/site/site-header/site-header.js: {}
 
 sprite:
   js:
