modify site header styles

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/site-header.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/site-header.yml
@@ -22,23 +22,57 @@ menu_items:
     below:
       - title: "Menu Item 1 Sub 1"
         url: "#"
+      - title: "Menu Item 1 Sub 2"
+        url: "#"
+      - title: "Menu Item 1 Sub 3"
+        url: "#"
+      - title: "Menu Item 1 Sub 4"
+        url: "#"
+      - title: "Menu Item 1 Sub 5"
+        url: "#"
+      - title: "Menu Item 1 Sub 6"
+        url: "#"
+      - title: "Menu Item 1 Sub 7"
+        url: "#"
+      - title: "Menu Item 1 Sub 8"
+        url: "#"
   - title: "Locations"
     url: "#"
     below:
       - title: "Menu Item 2 Sub 1"
         url: "#"
-  - title: "Patient Services"
+      - title: "Menu Item 2 Sub 2"
+        url: "#"
+      - title: "Menu Item 2 Sub 3"
+        url: "#"
+      - title: "Menu Item 2 Sub 4"
+        url: "#"
+      - title: "Menu Item 2 Sub 5"
+        url: "#"
+      - title: "Menu Item 2 Sub 6"
+        url: "#"
+      - title: "Menu Item 2 Sub 7"
+        url: "#"
+      - title: "Menu Item 2 Sub 8"
+        url: "#"
+  - title: "Patients & Visitors"
     url: "#"
     below:
-      - title: "What to Expect"
+      - title: "Menu Item 3 Sub 1"
         url: "#"
-      - title: "Patient Portal"
+      - title: "Menu Item 3 Sub 2"
         url: "#"
-      - title: "Costs & Billing"
+      - title: "Menu Item 3 Sub 3"
         url: "#"
-      - title: "Appointments"
+      - title: "Menu Item 3 Sub 4"
         url: "#"
-      - title: "Services & Conditions"
+      - title: "Menu Item 3 Sub 5"
+        url: "#"
+      - title: "Menu Item 3 Sub 6"
+        url: "#"
+      - title: "Menu Item 3 Sub 7"
+        url: "#"
+      - title: "Menu Item 3 Sub 8"
         url: "#"
   - title: "Medical Professionals"
     url: "#"
@@ -46,7 +80,21 @@ menu_items:
       1:
         secondary
     below:
-      - title: "Menu Item 2 Sub 1"
+      - title: "Menu Item 4 Sub 1"
+        url: "#"
+      - title: "Menu Item 4 Sub 2"
+        url: "#"
+      - title: "Menu Item 4 Sub 3"
+        url: "#"
+      - title: "Menu Item 4 Sub 4"
+        url: "#"
+      - title: "Menu Item 4 Sub 5"
+        url: "#"
+      - title: "Menu Item 4 Sub 6"
+        url: "#"
+      - title: "Menu Item 4 Sub 7"
+        url: "#"
+      - title: "Menu Item 4 Sub 8"
         url: "#"
   - title: "Academics"
     url: "#"
@@ -54,9 +102,19 @@ menu_items:
       1:
         secondary
     below:
-      - title: "School of Health Sciences"
+      - title: "Menu Item 5 Sub 1"
         url: "#"
-      - title: "Medical School"
+      - title: "Menu Item 5 Sub 2"
         url: "#"
-      - title: "Internships & Training"
+      - title: "Menu Item 5 Sub 3"
+        url: "#"
+      - title: "Menu Item 5 Sub 4"
+        url: "#"
+      - title: "Menu Item 5 Sub 5"
+        url: "#"
+      - title: "Menu Item 5 Sub 6"
+        url: "#"
+      - title: "Menu Item 5 Sub 7"
+        url: "#"
+      - title: "Menu Item 5 Sub 8"
         url: "#"
