--- a/config/sites/default/block.block.languagesstring.yml
+++ b/config/sites/default/block.block.languagesstring.yml
@@ -1,26 +1,26 @@
-uuid: 1106b981-26fb-47e4-a516-12175c9f75f4
+uuid: fafd1581-9f98-46d0-975c-5e424ab1d185
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.gender
+    - facets.facet.languages
   module:
     - facets
     - system
   theme:
     - tower_health
-id: gender
+id: languagesstring
 theme: tower_health
 region: content
-weight: -2
+weight: 0
 provider: null
-plugin: 'facet_block:gender'
+plugin: 'facet_block:languages'
 settings:
-  id: 'facet_block:gender'
-  label: Gender
+  id: 'facet_block:languages'
+  label: Languages
   provider: facets
   label_display: visible
-  block_id: gender
+  block_id: languagesstring
 visibility:
   request_path:
     id: request_path
