--- a/config/sites/default/block.block.specialties.yml
+++ b/config/sites/default/block.block.specialties.yml
@@ -6,6 +6,7 @@ dependencies:
     - facets.facet.specialties
   module:
     - facets
+    - system
   theme:
     - tower_health
 id: specialties
@@ -20,4 +21,9 @@ settings:
   provider: facets
   label_display: visible
   block_id: specialties
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: "/find-a-provider\r\n/find-a-provider*"
+    negate: false
+    context_mapping: {  }
