--- a/config/sites/default/views.view.find_a_location.yml
+++ b/config/sites/default/views.view.find_a_location.yml
@@ -6,6 +6,7 @@ dependencies:
     - search_api.index.acquia_search_index
   module:
     - search_api
+    - search_api_location_views
 id: find_a_location
 label: 'Find a Location'
 module: views
@@ -261,6 +262,126 @@ display:
             group_items: {  }
           reduce_duplicates: false
           plugin_id: search_api_options
+        latlon:
+          id: latlon
+          table: search_api_index_acquia_search_index
+          field: latlon
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '<'
+          value:
+            value: ''
+            distance:
+              from: '-'
+              to: '-'
+            min: ''
+            max: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: latlon_op
+            label: 'Location Geo » LatLong Pair'
+            description: ''
+            use_operator: false
+            operator: latlon_op
+            identifier: latlon
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin: geocode
+          plugin-geocode_map:
+            radius_border_color: ''
+            radius_border_weight: ''
+            radius_background_color: ''
+            radius_background_transparency: ''
+            marker_image: ''
+          plugin-raw:
+            radius_type: select
+            radius_options: "- -\r\n5 5 km\r\n10 10 km\r\n16.09 10 mi"
+            radius_units: km
+          plugin-geocode:
+            plugins:
+              arcgisonline:
+                weight: '0'
+                checked: 0
+              bingmaps:
+                weight: '0'
+                checked: 0
+              file:
+                weight: '0'
+                checked: 0
+              freegeoip:
+                weight: '0'
+                checked: 0
+              geoip:
+                weight: '0'
+                checked: 0
+              geonames:
+                weight: '0'
+                checked: 0
+              geoplugin:
+                weight: '0'
+                checked: 0
+              googlemaps:
+                weight: '0'
+                checked: 0
+              googlemaps_business:
+                weight: '0'
+                checked: 0
+              hostip:
+                weight: '0'
+                checked: 0
+              ipinfodb:
+                weight: '0'
+                checked: 0
+              mapquest:
+                weight: '0'
+                checked: 0
+              maxmind:
+                weight: '0'
+                checked: 0
+              nominatim:
+                weight: '0'
+                checked: 0
+              opencage:
+                weight: '0'
+                checked: 0
+              openstreetmap:
+                checked: '1'
+                weight: '0'
+              random:
+                weight: '0'
+                checked: 0
+              tomtom:
+                weight: '0'
+                checked: 0
+              yandex:
+                weight: '0'
+                checked: 0
+            radius_type: select
+            radius_options: "- -\r\n8.046 5 mi\r\n16.09 10 mi\r\n40.233 25 mi"
+            radius_units: km
+          plugin_id: search_api_string
       sorts:
         search_api_relevance:
           id: search_api_relevance
