--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
+    - field.field.node.location.field_location_geo
     - field.field.node.location.field_location_hours
     - field.field.node.location.field_location_id
     - field.field.node.location.field_location_image
@@ -21,6 +22,7 @@ dependencies:
   module:
     - content_moderation
     - field_group
+    - geofield
     - media_library
     - paragraphs
     - path
@@ -67,6 +69,7 @@ third_party_settings:
         - title
         - field_location_id
         - field_location_address
+        - field_location_geo
         - field_location_phone_number
         - field_location_fax
         - field_location_hours
@@ -173,7 +176,7 @@ content:
     type: readonly_field_widget
     region: content
   field_location_body:
-    weight: 11
+    weight: 35
     settings:
       rows: 5
       placeholder: ''
@@ -193,7 +196,7 @@ content:
     third_party_settings: {  }
     region: content
   field_location_fax:
-    weight: 16
+    weight: 17
     settings:
       label: above
       formatter_type: null
@@ -214,8 +217,15 @@ content:
       default_paragraph_type: _none
     third_party_settings: {  }
     region: content
+  field_location_geo:
+    weight: 15
+    settings:
+      html5_geolocation: false
+    third_party_settings: {  }
+    type: geofield_latlon
+    region: content
   field_location_hours:
-    weight: 17
+    weight: 18
     settings:
       label: above
       formatter_type: null
@@ -236,7 +246,7 @@ content:
     region: content
   field_location_image:
     type: media_library_widget
-    weight: 10
+    weight: 34
     settings:
       media_types: {  }
     third_party_settings: {  }
@@ -256,7 +266,7 @@ content:
     type: options_buttons
     region: content
   field_location_phone_number:
-    weight: 15
+    weight: 16
     settings:
       label: above
       formatter_type: null
@@ -266,7 +276,7 @@ content:
     type: readonly_field_widget
     region: content
   field_location_type:
-    weight: 9
+    weight: 33
     settings: {  }
     third_party_settings: {  }
     type: options_select
