--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -2,6 +2,8 @@ global:
   css:
     theme:
       dist/style.css: {}
+  js:
+    dist/00-base/global/animations/animation.js: {}
 
 main-menu:
   js:
