--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
         "drupal/search_api_location": "^1.0",
         "drupal/search_api_solr": "^1.1",
         "drupal/token": "^1.5",
+        "drupal/twig_tweak": "^2.4",
         "drupal/workbench": "^1.1",
         "drupal/workbench_tabs": "^1.3",
         "flow/jsonpath": "^0.4.0",
