--- a/config/sites/default/core.entity_view_display.node.location.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.location.search_index.yml
@@ -130,6 +130,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_location_geo: true
   field_location_id: true
   field_location_image: true
   field_location_omw: true
