Add custom modernizr to drupal.

--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -4,6 +4,7 @@ global:
       dist/style.css: {}
   js:
     dist/00-base/global/animations/animation.js: {}
+    components/js/modernizer-custom.js: {}
 
 main-menu:
   js:
